# MTL_airfoil_surrogate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
configs/callbacks/: rich_progress_bar.yaml
configs/datamodule/: airflow_datamodule.yaml
configs/experiment/: airflow.yaml  airflow_mtl.yaml
configs/extras/: default.yaml
configs/logger/: aim.yaml  comet.yaml  mlflow.yaml  neptune.yaml  tensorboard.yaml  wandb.yaml
configs/mode/: debug.yaml  exp.yaml
configs/model/: mlp.yaml  mtl_mlp_I.yaml  mtl_mlp_II.yaml  mtl_pointnet_I.yaml  mtl_pointnet_II.yaml  pointnet.yaml
configs/paths/: default.yaml
src/: eval.py  train.py
src/callbacks/: callback.py
src/datamodules/: airflow_datamodule.py
src/datamodules/datasets/: airflow.py  airflow_dataset.py
src/models/: airflow_module.py  airflow_module_mtl.py
src/models/modules/airflow_models/: Airflow_MLP.py  Airflow_NN.py  PointNet.py
src/models/modules/mtl/: abstract_weighting.py  min_norm_solvers.py  weight_methods.py
src/utils/: __init__.py  logging_utils.py  rich_utils.py  utils.py
src/utils/airflow/: airflow_metrics.py
