[project]
name = "MTL-AirfRANS"
version = "0.1.0"
authors = [{ name = "HU Xin" }]
description = "Airfoil shape design surrogate model project with MTL"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ruff>=0.6.4",
    "torch==2.3.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.7.0",
    "pyvista",
    "torch_geometric",
    "hydra-core>=1.3.0",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "aim",
    "pre-commit",
    "black",
    "isort",
    "flake8",
    "nbstripout",
    "python-dotenv",
    "rich",
    "pytest",
    "sh",
    "pudb",
    "rootutils",
]

[tool.pyright]
root = ['src']
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]


useLibraryCodeForTypes = true

typeCheckingMode = "off"
reportMissingImports = "information"
reportMissingTypeStubs = "information"
# reportUnknownMemberType = "information"
diagnosticMode = 'workspace'
"stubPath" = ".ruff_cache"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 80

## uncomment the uv.index for Chinese user
# [[tool.uv.index]]
# url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
# default = true

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    # "I",  # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E402",
]
[tool.ruff.flake8-quotes]
inline-quotes = "double"
